# cns

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  LICENSE  LICENSE-fiadt0001  Makefile  PRECOMMIT_SETUP.md  README-fiadt0001.md  README.md  bootstrap_cns_repo.sh  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.project_tracking/: cns_phased_build_plan.md  cns_project_overview.md  phase_0a_completion_summary.md  phase_0a_receipts.md  remediation_and_next_phase_plan.md
cns.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cns_py/: __init__.py  config.py  graph.py  nn.py
docker/: docker-compose.yml
docs/: 01-vision.md  02-architecture.md  03-cql-spec.md  04-roadmap.md  05-visualization.md  06-ib-vs-db.md  QA.md  README.md
explorer/: index.html
scripts/: cql_smoke.py  create_issues.ps1  create_issues.sh  db_inspect.py  inspect_clone.py  perf_smoke.py  prov_verify.py  quick_check_traverse.py  run_api.py  setup_precommit.ps1  setup_precommit.sh
tests/: admin_db.py  conftest.py  test_api_server.py  test_belief.py  test_belief_aggregation.py  test_belief_config_weights.py  test_belief_internals.py  test_belief_more.py  test_belief_unit.py  test_contradict.py  test_contradiction_integration.py  test_cql_executor.py  test_dbconfig_unit.py  test_demo_query.py  test_executor_asof_and_explain.py  test_executor_belief_filter.py  test_executor_explain.py  test_executor_planner.py  test_nn_and_traverse.py  test_nn_edgecases.py  test_nn_nomatch.py  test_parser.py  test_parser_edges.py  test_parser_property.py  test_parser_unit.py
(+35 files in other folders)
